# codespace

.github/workflows/: dumper.yml  main.yml
BedrockClient_final/BedrockClient/: CMakeLists.txt  README.md
BedrockClient_final/BedrockClient/src/: Module.h  ModuleManager.h  dllmain.cpp
BedrockClient_final/BedrockClient/src/gui/: ClickGUI.cpp  ClickGUI.h
BedrockClient_final/BedrockClient/src/hooks/: DXHook.h
BedrockClient_final/BedrockClient/src/modules/: FPSDisplay.h  Keystrokes.h  PingDisplay.h
BedrockClient_final/BedrockClient/src/utils/: CommandHandler.h
BedrockV2/BedrockV2/: CMakeLists.txt  dllmain.cpp
workflows/: build.yml
